ash-arch/iptables.rules
*filter

# This has many flaws!!!
# Replace with nftables when possible

# Default settings for chains
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

:TCP - [0:0]
:UDP - [0:0]

# Output and forwarding setups
-A OUTPUT -j ACCEPT
-A FORWARD -j DROP

# Input chain rules

# lo stuff
-A INPUT -i lo -j ACCEPT 
-A INPUT ! -i lo -d 127.0.0.1/8 -j DROP

# ICMP pings - accept
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT -m conntrack --ctstate NEW

# Keep all existing connections
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Drop invalid packets
-A INPUT -m conntrack --ctstate INVALID -j DROP

# Accept valid TCP and UDP packets
# Send them off to a suitable sub-chain
-A INPUT -p tcp -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP

-A INPUT -p tcp -j REJECT --reject-with tcp-reset 
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable 
-A INPUT -j REJECT --reject-with icmp-proto-unreachable 
-A INPUT -j DROP

# TCP and UDP rules
# --dport not working
-A TCP -p tcp -s 192.168.1.0/24 -j ACCEPT
-A UDP -j REJECT

COMMIT
